--- a/src/main/resources/static/css/scss/admin.scss
+++ b/src/main/resources/static/css/scss/admin.scss
@@ -15,6 +15,7 @@
 @import 'pages/admin/itemMng';
 @import 'pages/admin/orderMng';
 @import 'pages/admin/adminMain';
+@import 'pages/admin/itemDtl';
 
 main {
     display: flex;
