--- a/src/main/resources/static/css/css/default.css
+++ b/src/main/resources/static/css/css/default.css
@@ -58,9 +58,8 @@ input:-webkit-autofill:active {
 .black_btn_w90_h30,
 .black_btn_w65_h30 {
   display: inline-block;
-  padding: 10px 8px 10px 8px;
   font-size: 13px;
-  border: 1px solid transparent;
+  border: 1px solid transparent !important;
   vertical-align: middle;
   text-align: center;
   color: #fff;
@@ -98,19 +97,18 @@ input:-webkit-autofill:active {
 .white_btn_w90_h30,
 .white_btn_w65_h30 {
   display: inline-block;
-  padding: 10px 8px 10px 8px;
   font-size: 13px;
-  border: 1px solid #e2e2e2;
+  border: 1px solid #e2e2e2 !important;
   vertical-align: middle;
   text-align: center;
   color: #222;
-  background-color: #fff;
+  background-color: white;
 }
 .white_btn_w130_h40:hover,
 .white_btn_w90_h40:hover,
 .white_btn_w90_h30:hover,
 .white_btn_w65_h30:hover {
-  border: 1px solid black;
+  border: 1px solid black !important;
 }
 
 .white_btn_w130_h40 {
