--- a/src/main/resources/templates/admin/item/itemEnroll.html
+++ b/src/main/resources/templates/admin/item/itemEnroll.html
@@ -19,7 +19,7 @@
                     <div class="divider"></div>
                 </div>
                 <div class="add_item_body mt-5">
-                    <form id="itemFormDto" th:action="@{'/admin/item}" th:object="${itemFormDto}" method="post" enctype="multipart/form-data">
+                    <form id="itemFormDto" th:action="@{/admin/item}" th:object="${itemFormDto}" method="post" enctype="multipart/form-data">
                         <table style="table-layout: fixed !important;">
                             <colgroup>
                                 <col style="width:20%;">
@@ -260,10 +260,8 @@
                 itemDetailChk = false;
             }
 
-            console.log("discountChk = " + discountChk);
-
             if (itemSellStatusChk && categoryChk && itemNmChk && priceChk && discountChk && stockNumberChk && itemDetailChk) {
-                // $('#itemFormDto').attr("action", "/admin/item/" );
+                $('#itemFormDto').attr("action", "/admin/item/" );
                 $('#itemFormDto').submit();
             } else {
                 return false;
